--- a/Minimalistic Blog Theme/default.hbs
+++ b/Minimalistic Blog Theme/default.hbs
@@ -23,15 +23,14 @@
           <aside class="author">
             
             <img class="profile-image" src="{{asset "img/profile-image.jpg"}}" alt="" />
-            <p class="name">by <strong>Leônidas V.</strong></p>
-            <p class="about">Heavy Linux-user, developer, geek, GNU-GPL v3 compliant.</p>
-            <p class="address">São Paulo, Brazil.</p>
-            <p class="link"><a href="http://leonidasv.com/portifolio" title="Portifolio">Portifolio</a></p>
+            <p class="name">by <strong>Jonathan Grahl</strong></p>
+            <p class="about">Heavy Linux-user, developer, geek, GNU-GPL v3 compliant</p>
+            <p class="address">Stockholm, Sweden</p>
 
             <ul class="social">
-              <li><a class="icon-facebook-squared" href="http://facebook.com/leonidasvilleneuve" target="_blank" title="Facebook"></a></li>
-              <li><a class="icon-github" href="https://github.com/leonidasv" target="_blank" title="Fork me on Github"></a></li>
-              <li><a class="icon-instagram" href="https://instagram.com/essefoiousermenospiorqeuachei" target="_blank" title="Instagram"></a></li>
+              <li><a class="icon-facebook-squared" href="http://facebook.com/nikentic" target="_blank" title="Facebook"></a></li>
+              <li><a class="icon-github" href="https://github.com/nikentic" target="_blank" title="Fork me on Github"></a></li>
+              <li><a class="icon-instagram" href="https://instagram.com/heligagrahlen" target="_blank" title="Instagram"></a></li>
             </ul>
 
           </aside>
@@ -53,7 +52,7 @@
           <div class="container clearfix">
            
               <a class="icon-rss" href="{{@blog.url}}/rss/" title="RSS Feed"></a>
-              <p>All content copyright <a href="http://leonidasv.com" title="Leonidas Villeneuve">Leonidas Villeneuve</a> &copy; 2017. All rights reserved.</p>
+              <p>All content copyright Jonathan Grahl &copy; 2017. All rights reserved.</p>
               <p>Proudly published with Ghost. Theme designed by <a href="http://leonidasv.com" title="Leonidas Villeneuve">Leonidas Villeneuve</a>, based on concept by <a href="http://blog.rriegger.com/" title="Raphael Riegger - UI/UX Designer">Raphael Riegger</a>.</p>
            
           </div>
