Removing weird img link and fixing bio/image

--- a/Minimalistic Blog Theme/default.hbs
+++ b/Minimalistic Blog Theme/default.hbs
@@ -24,13 +24,12 @@
     
     <img class="profile-image" src="{{asset "img/profile-image.jpg"}}" alt="" />
     <p class="name">by <strong>{{author.name}}Jonathan Grahl</strong></p>
-    <p class="about">Heavy Linux-user, developer, geek, GNU-GPL v3 compliant</p>
+    <p class="about">Fullstack developer and DevOps practitioner</p>
     <p class="address">Stockholm, Sweden</p>
 
     <ul class="social">
-      <li><a class="icon-facebook-squared" href="http://facebook.com/nikentic" target="_blank" title="Facebook"></a></li>
       <li><a class="icon-github" href="https://github.com/nikentic" target="_blank" title="Fork me on Github"></a></li>
-      <li><a class="icon-instagram" href="https://instagram.com/heligagrahlen" target="_blank" title="Instagram"></a></li>
+      <li><a class="icon-twitter" href="https://twitter.com/jonathangrahl" target="_blank" title="Twitter"></a></li>
     </ul>
 
   </aside>
