Square profile picture

--- a/Minimalistic Blog Theme/default.hbs
+++ b/Minimalistic Blog Theme/default.hbs
@@ -24,7 +24,7 @@
     
     <img class="profile-image" src="{{asset "img/profile-image.jpg"}}" alt="" />
     <p class="name">by <strong>{{author.name}}Jonathan Grahl</strong></p>
-    <p class="about">Fullstack developer and DevOps practitioner</p>
+    <p class="about">Fullstack developer</br>DevOps practitioner</p>
     <p class="address">Stockholm, Sweden</p>
 
     <ul class="social">
@@ -42,10 +42,8 @@
          
           <h2><a class="logo ir" href="{{@blog.url}}" title="{{@blog.title}}">{{@blog.title}}</a></h2>
         </header>
-       
-       
-           {{{body}}}
-        
+
+        {{{body}}}
 
         <footer class="main-footer">
           <div class="container clearfix">
