Square profile picture

--- a/Minimalistic Blog Theme/default.hbs
+++ b/Minimalistic Blog Theme/default.hbs
@@ -22,7 +22,7 @@
 <div class="lateral">
   <aside class="author">
     
-    <img class="profile-image" src="{{asset "img/profile-image.jpg"}}" alt="" />
+    <img class="profile-image" src="{{asset "img/profile-image.png"}}" alt="" />
     <p class="name">by <strong>{{author.name}}Jonathan Grahl</strong></p>
     <p class="about">Fullstack developer</br>DevOps practitioner</p>
     <p class="address">Stockholm, Sweden</p>
